# git_detective-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
benches/: git_detective.rs  my_benchmark.rs
examples/: gd_final_contributions.rs  serde_final_contributions.rs
gd/: Cargo.toml
gd/src/: cli.rs  main.rs
gd/src/table/: commits.rs  diff_stats.rs  final_contributions.rs  mod.rs  tags.rs
gd/src/util/: diff_stats.rs  files.rs  final_contributions.rs  mod.rs
src/: diff_stats.rs  error.rs  git.rs  lib.rs  project_stats.rs  stats.rs
src/git/: blame.rs  branch.rs  commit.rs  file_status.rs  git_reference.rs  mod.rs  signature.rs  tag.rs
tests/: git_detective.rs
