[package]
name = "git_detective"
version = "0.1.0"
authors = ["NickHackman <snickhackman@gmail.com>"]
edition = "2018"

[dependencies]
git2 = "0.13.5"
url = "2.1.1"
thiserror = "1.0.16"
chrono = "0.4.11"
rayon = "1.3.0"

# Personal fork of Tokei in order to annotate files
tokei = {git = "https://github.com/NickHackman/tokei.git", branch = "annotate-files"}

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "git_detective"
harness = false
