[package]
name = "git_detective"
version = "0.1.0"
authors = ["NickHackman <snickhackman@gmail.com>"]
edition = "2018"

[dependencies]
url = "2.1.1"
thiserror = "1.0.19"
chrono = "0.4.11"
rayon = "1.3.0"

[dependencies.git2]
version = "0.13.6"
default-features = false
features = ["https"]

[dependencies.tokei]
# Personal fork of Tokei in order to annotate files
git = "https://github.com/NickHackman/tokei.git"
branch = "annotate-files"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "git_detective"
harness = false
